--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@clerk/nextjs": "^6.9.0",
     "@fontsource/google-sans": "^5.2.1",
     "lucide-react": "^0.460.0",
-    "next": "15.3.8",
+    "next": "^15.5.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
